[tool.poetry]
name = "real_estate_boom"
version = "0.1.0"
description = ""
authors = ["davidtnfsh <davidtnfsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
